# plasmapy-test

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: testing.yml
docs/: Makefile  common_links.txt  conf.py  index.rst  make.bat
requirements/: docs.txt  environment.yml  extras.txt  install.txt
